--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,7 +2,7 @@ NAME = ex00
 
 C++ = c++
 C++FLAGS = -Wall -Wextra -Werror -std=c++98 -MMD
-SRC = main.cpp Bureaucrat.cpp
+SRC = main.cpp Bureaucrat.cpp Form.cpp
 
 OBJ = $(SRC:.cpp=.o)
 D = $(OBJ:.o=.d)
