--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -1,7 +1,7 @@
 NAME = ex03
 
 C++ = c++
-C++FLAGS = -Wall -Wextra -Werror -std=c++98 -MMD
+C++FLAGS = -Wall -Wextra -Werror -std=c++98 -MMD -pedantic
 SRC = main.cpp\
 	Bureaucrat.cpp\
 	AForm.cpp\
@@ -30,4 +30,4 @@ re: fclean all
 
 -include $(D)
 
-PHONY: all clean fclean re
+.PHONY: all clean fclean re
